objects/CMN_CommunicationLog__c.object
<CustomObject>
    <description>Object used to store the communication log information</description>
    <fields>
        <fullName>CMN_CommunicationTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Represents the Communication Template associated with Communication Log</description>
        <label>Template</label>
        <referenceTo>CMN_CommunicationTemplate__c</referenceTo>
        <relationshipLabel>Communication Logs</relationshipLabel>
        <relationshipName>Communication_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMN_OtherComments__c</fullName>
        <description>used to store the comments for a communication log</description>
        <label>Other Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMN_Recipients__c</fullName>
        <description>Represents the recipients to whom the communication has to be logged</description>
        <label>Recipients</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Financial Adviser</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMN_RequestedDocuments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used to identify if any documents has been requested by user</description>
        <label>Requested Documents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMN_SendReminder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean field to check recent log info to send reminders to client.</description>
        <label>Send Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMN_Status__c</fullName>
        <description>used to represent the status of the communication log</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Represents the Case associated with Communication log</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Communication Logs</relationshipLabel>
        <relationshipName>Communication_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RSC_CommunicationTemplate__c</fullName>
        <description>Represents the Communication Template associated with Communication Log</description>
        <formula>CMN_CommunicationTemplate__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Template</label>
        <type>Text</type>
    </fields>
    <label>Communication Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>CMN_Status__c</columns>
        <columns>CMN_CommunicationTemplate__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Communication Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>